--- a/style.css
+++ b/style.css
@@ -1,5 +1,41 @@
-#hello {
-    color: red;
-    font-weight: bold;
+.cv {
+    width: 1200px;
+    margin: 0 auto;
+    display: block;
 }
 
+.head-cv {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+}
+
+.name {
+    display: flex;
+    flex-direction: column;
+    flex: 2;
+}
+
+.avatar {
+    display: flex;
+    justify-content: flex-end;
+    flex: 1;
+}
+
+#first-name {
+    font: normal 24px Arial, sans-serif;
+}
+
+#family-name {
+    font: normal bold 30px Arial, sans-serif;
+}
+.body-cv {
+    display: flex;
+}
+.history{
+    display: flex;
+    flex: 3;
+}
+.info {
+    flex: 1;
+}
